--- a/cd.ContosoAir.yml
+++ b/cd.ContosoAir.yml
@@ -34,7 +34,7 @@ steps:
     location: 'West US 2'
     templateLocation: 'Linked artifact'
     csmFile: ': $(System.ArtifactsDirectory)/drop/Templates/azuredeploy.json'
-    csmParametersFile: '$(System.ArtifactsDirectory)/drop/Templates/azuredeploy.parameters.json'
+    csmParametersFile: '$(Build.SourcesDirectory)/drop/Templates/azuredeploy.parameters.json'
     overrideParameters: '-p_environment $(web_environment) -p_site_prefix $(web_prefix) -p_site_web_name $(web_site)'
     deploymentMode: 'Incremental'
 - task: AzureRmWebAppDeployment@4
@@ -43,7 +43,7 @@ steps:
     azureSubscription: 'Microsoft Azure Internal Consumption(adcb004d-eaae-471a-9341-d5e25a17c8ba)'
     appType: 'webApp'
     WebAppName: '"$(web_prefix)-$(web_site)-$(web_environment)"'
-    packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'
+    packageForLinux: '$(Build.SourcesDirectory)/**/*.zip'
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
