--- a/cd.ContosoAir.yml
+++ b/cd.ContosoAir.yml
@@ -15,7 +15,7 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: DownloadPipelineArtifact@2
+- task: DownloadBuildArtifacts@0
   inputs:
     buildType: 'specific'
     project: '5b4aa55f-7b45-4d8c-a47a-6b51dd490cf4'
@@ -23,7 +23,7 @@ steps:
     specificBuildWithTriggering: true
     buildVersionToDownload: 'latest'
     artifactName: 'drop'
-    targetPath: '$(Pipeline.Workspace)'
+    downloadPath: '$(System.ArtifactsDirectory)'
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
     deploymentScope: 'Resource Group'
@@ -34,7 +34,7 @@ steps:
     location: 'West US 2'
     templateLocation: 'Linked artifact'
     csmFile: ': $(System.ArtifactsDirectory)/drop/Templates/azuredeploy.json'
-    csmParametersFile: '$(Build.SourcesDirectory)/drop/Templates/azuredeploy.parameters.json'
+    csmParametersFile: '$(System.ArtifactsDirectory)/drop/Templates/azuredeploy.parameters.json'
     overrideParameters: '-p_environment $(web_environment) -p_site_prefix $(web_prefix) -p_site_web_name $(web_site)'
     deploymentMode: 'Incremental'
 - task: AzureRmWebAppDeployment@4
@@ -43,7 +43,7 @@ steps:
     azureSubscription: 'Microsoft Azure Internal Consumption(adcb004d-eaae-471a-9341-d5e25a17c8ba)'
     appType: 'webApp'
     WebAppName: '"$(web_prefix)-$(web_site)-$(web_environment)"'
-    packageForLinux: '$(Build.SourcesDirectory)/**/*.zip'
+    packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
