--- a/cd.ContosoAir.yml
+++ b/cd.ContosoAir.yml
@@ -22,6 +22,7 @@ steps:
     definition: '52'
     specificBuildWithTriggering: true
     buildVersionToDownload: 'latest'
+    downloadType: 'single'
     artifactName: 'drop'
     downloadPath: '$(System.ArtifactsDirectory)'
 - task: AzureResourceManagerTemplateDeployment@3
