--- a/cd.ContosoAir.yml
+++ b/cd.ContosoAir.yml
@@ -34,7 +34,7 @@ steps:
     resourceGroupName: '$(resourcegroup)'
     location: 'West US 2'
     templateLocation: 'Linked artifact'
-    csmFile: ': $(System.ArtifactsDirectory)/drop/Templates/azuredeploy.json'
+    csmFile: '$(System.ArtifactsDirectory)/drop/Templates/azuredeploy.json'
     csmParametersFile: '$(System.ArtifactsDirectory)/drop/Templates/azuredeploy.parameters.json'
     overrideParameters: '-p_environment $(web_environment) -p_site_prefix $(web_prefix) -p_site_web_name $(web_site)'
     deploymentMode: 'Incremental'
