--- a/cd.ContosoAir.yml
+++ b/cd.ContosoAir.yml
@@ -43,5 +43,5 @@ steps:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Microsoft Azure Internal Consumption(adcb004d-eaae-471a-9341-d5e25a17c8ba)'
     appType: 'webApp'
-    WebAppName: '"$$(web_environment)-$(web_site)-$(web_prefix)"'
+    WebAppName: '"$$(web_prefix)-$(web_site)-$(web_environment)"'
     packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'
